# rulebox-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
rulebox-python/: .coverage  Cargo.toml  README.md  pyproject.toml
rulebox-python/python/rulebox/: __init__.py  __init__.pyi
rulebox-python/src/: lib.rs
rulebox-python/tests/: conftest.py  test_integration.py  test_pandas_integration.py  test_rulebox.py  test_typing.py
rulebox-rust/: Cargo.toml
rulebox-rust/benches/: assign_labels_bench.rs
rulebox-rust/src/: lib.rs
rulebox-rust/tests/: test_optimized_default.rs
script/: build  clean  console  help  lint  setup  test
